<resources>
    <string name="api_key">9c002a7ca9f1432ab193a38d91006ba7</string>
    <string name="app_name">QuickBate</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
</resources>