<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <android.support.v7.widget.CardView
        android:layout_margin="15dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.SearchView>
    </android.support.v7.widget.CardView>
    <HorizontalScrollView
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_1"
                android:text="@string/business"
                android:shadowColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_2"
                android:text="@string/entertainment"
                android:textSize="14sp"
                android:shadowColor="@color/black"
                android:textStyle="italic"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_3"
                android:text="@string/general"
                android:textSize="14sp"
                android:shadowColor="@color/black"
                android:textStyle="italic"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_4"
                android:text="@string/health"
                android:textSize="14sp"
                android:textStyle="italic"
                android:shadowColor="@color/black"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_5"
                android:text="@string/science"
                android:textSize="14sp"
                android:textStyle="italic"
                android:shadowColor="@color/black"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_6"
                android:text="@string/sports"
                android:textSize="14sp"
                android:textStyle="italic"
                android:shadowColor="@color/black"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_7"
                android:text="@string/technology"
                android:textSize="14sp"
                android:shadowColor="@color/black"
                android:textStyle="italic"
                android:padding="7dp"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>

    </HorizontalScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>